--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "ssdeploy": "^0.7.1",
     "sugarss": "^4.0.1",
     "typedoc": "^0.22.4",
-    "typescript": "~4.4.3",
+    "typescript": "^4.4.3",
     "unified": "^10.1.0",
     "unist-util-filter": "^4.0.0",
     "unist-util-flatmap": "^1.0.0",
