--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
   },
   "dependencies": {
     "@babel/core": "^7.15.8",
-    "@parcel/optimizer-cssnano": "2.0.0-beta.2",
-    "@parcel/optimizer-htmlnano": "2.0.0-beta.2",
-    "@parcel/packager-css": "2.0.0-beta.2",
-    "@parcel/packager-html": "2.0.0-beta.2",
-    "@parcel/transformer-css": "2.0.0-beta.2",
-    "@parcel/transformer-html": "2.0.0-beta.2",
-    "@parcel/transformer-postcss": "2.0.0-beta.2",
-    "@parcel/transformer-posthtml": "2.0.0-beta.2",
-    "@parcel/transformer-pug": "2.0.0-beta.2",
-    "@parcel/transformer-sugarss": "2.0.0-beta.2",
+    "@parcel/optimizer-cssnano": "2.0.0",
+    "@parcel/optimizer-htmlnano": "2.0.0",
+    "@parcel/packager-css": "2.0.0",
+    "@parcel/packager-html": "2.0.0",
+    "@parcel/transformer-css": "2.0.0",
+    "@parcel/transformer-html": "2.0.0",
+    "@parcel/transformer-postcss": "2.0.0",
+    "@parcel/transformer-posthtml": "2.0.0",
+    "@parcel/transformer-pug": "2.0.0",
+    "@parcel/transformer-sugarss": "2.0.0",
     "autoprefixer": "^10.3.7",
     "capitalize": "^2.0.3",
     "del": "^6.0.0",
@@ -33,8 +33,8 @@
     "lowlight": "^2.3.0",
     "make-dir": "^3.1.0",
     "nanoevents": "^6.0.1",
-    "parcel": "2.0.0-beta.2",
-    "picocolors": "^0.2.1",
+    "parcel": "2.0.0",
+    "picocolors": "^1.0.0",
     "postcss": "^8.3.9",
     "postcss-combine-media-query": "^1.0.1",
     "postcss-hexrgba": "^2.0.1",
@@ -55,10 +55,10 @@
     "remark-rehype": "^10.0.0",
     "slugify": "^1.6.1",
     "spinnies": "^0.5.1",
-    "ssdeploy": "^0.7.1",
+    "ssdeploy": "^0.7.2",
     "sugarss": "^4.0.1",
     "typedoc": "^0.22.4",
-    "typescript": "^4.4.3",
+    "typescript": "^4.4.4",
     "unified": "^10.1.0",
     "unist-util-filter": "^4.0.0",
     "unist-util-flatmap": "^1.0.0",
@@ -66,26 +66,26 @@
     "unzipper": "^0.10.11"
   },
   "devDependencies": {
-    "@logux/eslint-config": "^45.4.8",
+    "@logux/eslint-config": "^46.0.0",
     "@logux/sharec-config": "^0.12.2",
     "@logux/stylelint-config": "^0.3.1",
-    "@size-limit/file": "^5.0.5",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "eslint": "^7.32.0",
+    "@size-limit/file": "^6.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^8.0.1",
     "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jest": "^24.5.2",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jest": "^25.0.6",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prefer-let": "^1.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-unicorn": "^36.0.0",
-    "lint-staged": "^11.2.1",
+    "eslint-plugin-unicorn": "^37.0.1",
+    "lint-staged": "^11.2.3",
     "prettier": "^2.4.1",
     "serve": "^12.0.1",
     "simple-git-hooks": "^2.6.1",
-    "size-limit": "^5.0.5",
+    "size-limit": "^6.0.3",
     "stylelint": "^13.13.1",
     "svgo": "^2.7.0"
   },
