--- a/package.json
+++ b/package.json
@@ -168,23 +168,32 @@
   },
   "size-limit": [
     {
+      "name": "Files to download",
       "path": [
-        "dist/uikit/index.html",
-        "dist/*.woff",
-        "dist/*.svg",
-        "dist/*.js",
-        "dist/*.css",
-        "!dist/service.js",
-        "!dist/open.*.svg",
-        "!dist/close.*.svg",
-        "!dist/chat.*.svg",
-        "!dist/pinned.*.svg",
-        "!dist/favicon.*.svg",
-        "!dist/chain-dark.*.svg",
-        "!dist/lurkers-dark.*.svg",
-        "!dist/logotype-dark.*.svg"
+        "dist/uikit/index.html.gz",
+        "dist/*.woff2",
+        "dist/*.svg.gz",
+        "dist/*.js.gz",
+        "dist/*.css.gz",
+        "!dist/service.js.gz",
+        "!dist/open.*.svg.gz",
+        "!dist/close.*.svg.gz",
+        "!dist/chat.*.svg.gz",
+        "!dist/pinned.*.svg.gz",
+        "!dist/favicon.*.svg.gz",
+        "!dist/chain-dark.*.svg.gz",
+        "!dist/lurkers-dark.*.svg.gz",
+        "!dist/logotype-dark.*.svg.gz"
       ],
-      "limit": "17 KB"
+      "limit": "90 KB"
+    },
+    {
+      "name": "Scripts to execute",
+      "path": [
+        "dist/*.js",
+        "!dist/service.js"
+      ],
+      "limit": "5 KB"
     }
   ],
   "sharec": {
