--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start": "serve dist/"
   },
   "dependencies": {
-    "@babel/core": "^7.16.0",
+    "@babel/core": "^7.16.5",
     "@parcel/optimizer-cssnano": "2.0.1",
     "@parcel/optimizer-htmlnano": "2.0.1",
     "@parcel/packager-css": "2.0.1",
@@ -35,11 +35,11 @@
     "nanoevents": "^6.0.2",
     "parcel": "2.0.1",
     "picocolors": "^1.0.0",
-    "postcss": "^8.3.11",
+    "postcss": "^8.4.5",
     "postcss-combine-media-query": "^1.0.1",
     "postcss-hexrgba": "^2.0.1",
     "postcss-media-minmax": "^5.0.0",
-    "postcss-mixins": "^8.1.0",
+    "postcss-mixins": "^9.0.1",
     "postcss-momentum-scrolling": "^3.14.22",
     "postcss-nested": "^5.0.6",
     "postcss-url": "^10.1.3",
@@ -50,15 +50,15 @@
     "rehype-stringify": "^9.0.2",
     "remark": "^14.0.2",
     "remark-highlight.js": "^7.0.1",
-    "remark-html": "^15.0.0",
+    "remark-html": "^15.0.1",
     "remark-parse": "^10.0.1",
-    "remark-rehype": "^10.0.1",
-    "slugify": "^1.6.2",
+    "remark-rehype": "^10.1.0",
+    "slugify": "^1.6.4",
     "spinnies": "^0.5.1",
-    "ssdeploy": "^0.7.2",
+    "ssdeploy": "^0.8.0",
     "sugarss": "^4.0.1",
-    "typedoc": "^0.22.9",
-    "typescript": "~4.5.2",
+    "typedoc": "^0.22.10",
+    "typescript": "~4.5.4",
     "unified": "^10.1.1",
     "unist-util-filter": "^4.0.0",
     "unist-util-flatmap": "^1.0.0",
@@ -66,20 +66,20 @@
     "unzipper": "^0.10.11"
   },
   "devDependencies": {
-    "@logux/eslint-config": "^46.1.0",
-    "@logux/stylelint-config": "^0.8.1",
-    "@size-limit/file": "^7.0.3",
-    "eslint": "^8.3.0",
+    "@logux/eslint-config": "^46.1.1",
+    "@logux/stylelint-config": "^0.9.0",
+    "@size-limit/file": "^7.0.4",
+    "eslint": "^8.5.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prefer-let": "^3.0.1",
-    "eslint-plugin-promise": "^5.1.0",
-    "nano-staged": "^0.1.5",
+    "eslint-plugin-promise": "^6.0.0",
+    "nano-staged": "^0.5.0",
     "serve": "^13.0.2",
     "simple-git-hooks": "^2.6.1",
-    "size-limit": "^7.0.3",
-    "stylelint": "^14.1.0",
+    "size-limit": "^7.0.4",
+    "stylelint": "^14.2.0",
     "svgo": "^2.8.0"
   },
   "repository": "logux/logux.io",
@@ -143,7 +143,7 @@
     }
   },
   "simple-git-hooks": {
-    "pre-commit": "./node_modules/.bin/nano-staged"
+    "pre-commit": "./node_modules/.bin/nano-staged --config package.json"
   },
   "prettier": {
     "arrowParens": "avoid",
