--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "unist-util-flatmap": "^1.0.0",
     "unist-util-visit": "^4.1.0",
     "unzipper": "^0.10.11",
-    "vite": "^2.7.13"
+    "vite": "^2.7.13",
+    "vite-plugin-pug-transformer": "^1.0.1"
   },
   "devDependencies": {
     "@logux/eslint-config": "^46.1.1",
