--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,11 +33,13 @@ jobs:
         env:
           FORCE_COLOR: 2
           WEBSITE_URL: ${{ secrets.WEBSITE_URL }}
+      - name: Auth Google Cloud
+        uses: google-github-actions/auth@v0
+        with:
+          credentials_json: ${{ secrets.GCLOUD_AUTH }}
       - name: Install Google Cloud
         if: "!steps.hash.outputs.noChanges"
         uses: google-github-actions/setup-gcloud@v0
-        with:
-          service_account_key: ${{ secrets.GCLOUD_AUTH }}
       - name: Deploy files
         if: "!steps.hash.outputs.noChanges"
         run: ./node_modules/.bin/ssdeploy deploy --verbose
