--- a/package.json
+++ b/package.json
@@ -13,14 +13,13 @@
     "start": "serve dist/"
   },
   "dependencies": {
-    "@babel/core": "^7.17.8",
     "autoprefixer": "^10.4.4",
     "capitalize": "^2.0.4",
     "del": "^6.0.0",
     "dotenv": "^16.0.0",
     "fast-glob": "^3.2.11",
     "jstransformer-lowlight": "^0.1.0",
-    "lowlight": "^2.6.0",
+    "lowlight": "^2.6.1",
     "make-dir": "^3.1.0",
     "nanoevents": "^6.0.2",
     "picocolors": "^1.0.0",
@@ -46,31 +45,31 @@
     "spinnies": "^0.5.1",
     "ssdeploy": "^0.8.1",
     "sugarss": "^4.0.1",
-    "typedoc": "^0.22.13",
+    "typedoc": "0.22.13",
     "typescript": "~4.6.3",
     "unified": "^10.1.2",
     "unist-util-filter": "^4.0.0",
     "unist-util-flatmap": "^1.0.0",
     "unist-util-visit": "^4.1.0",
     "unzipper": "^0.10.11",
-    "vite": "^2.8.6",
+    "vite": "^2.9.5",
     "vite-plugin-pug-transformer": "^1.0.1"
   },
   "devDependencies": {
-    "@logux/eslint-config": "^46.1.1",
-    "@logux/stylelint-config": "^0.9.0",
+    "@logux/eslint-config": "^47.0.0",
+    "@logux/stylelint-config": "^0.9.2",
     "@size-limit/file": "^7.0.8",
-    "eslint": "^8.12.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-node": "^11.1.0",
+    "eslint": "^8.13.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.1.0",
     "eslint-plugin-prefer-let": "^3.0.1",
     "eslint-plugin-promise": "^6.0.0",
-    "nano-staged": "^0.6.0",
+    "nano-staged": "^0.7.0",
     "serve": "^13.0.2",
     "simple-git-hooks": "^2.7.0",
     "size-limit": "^7.0.8",
-    "stylelint": "^14.6.1",
+    "stylelint": "^14.7.1",
     "svgo": "^2.8.0"
   },
   "repository": "logux/logux.io",
