Deploy only after test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,3 +26,7 @@ jobs:
           CI: 1
           NO_CONTENT: 1
           FORCE_COLOR: 2
+      - name: Deploy
+        if: github.ref == 'refs/heads/main'
+        run: |
+          curl -XPOST -u "${{ secrets.DEPLOY_USER }}:${{ secrets.DEPLOY_TOKEN }}" -H "Accept: application/vnd.github.everest-preview+json" -H "Content-Type: application/json" https://api.github.com/repos/logux/logux.io/dispatches --data '{"event_type": "deploy"}'
