--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,5 +38,6 @@ jobs:
       WEBSITE_URL: ${{ secrets.WEBSITE_URL }}
       GCLOUD_AUTH: ${{ secrets.GCLOUD_AUTH }}
       GCLOUD_APP: ${{ secrets.GCLOUD_APP }}
+      GCLOUD_PROJECT: ${{ secrets.GCLOUD_PROJECT }}
       CLOUDFLARE_ZONE: ${{ secrets.CLOUDFLARE_ZONE }}
       CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
