--- a/package.json
+++ b/package.json
@@ -76,9 +76,7 @@
   "homepage": "https://logux.io/",
   "license": "MIT",
   "browserslist": [
-    "last 2 versions",
-    "firefox esr",
-    "not dead",
+    "defaults",
     "not op_mini all",
     "not op_mob > 0",
     "not and_qq > 0",
