--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,6 +4,9 @@ on:
     branches:
       - main
   pull_request:
+permissions:
+  contents: read
+  deployments: write
 jobs:
   test:
     name: Test
@@ -27,7 +30,6 @@ jobs:
         env:
           CI: 1
           NO_CONTENT: 1
-          FORCE_COLOR: 2
   deploy:
     name: Deploy
     needs:
