add new section - examples

--- a/nginx.conf
+++ b/nginx.conf
@@ -30,6 +30,10 @@ location = /recipes/ {
   return 302 https://$http_host/recipes/authentication/;
 }
 
+location = /examples/ {
+  return 302 https://$http_host/examples/pagination/;
+}
+
 location = /protocols/ {
   return 302 https://$http_host/protocols/ws/spec/;
 }
