--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "scripts": {
     "start:uikit": "vite --open",
     "test:js": "eslint .",
-    "test:css": "stylelint src/**/*.sss",
     "test:build": "pnpm build && size-limit",
     "test": "pnpm run /^test:/",
     "clean": "rm -Rf dist/",
@@ -16,23 +15,22 @@
     "start": "serve dist/"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4.20",
     "capitalize": "^2.0.4",
     "del": "^7.1.0",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.5",
     "fast-glob": "^3.3.2",
     "jstransformer-lowlight": "^0.1.0",
     "lowlight": "^3.1.0",
-    "make-dir": "^4.0.0",
     "nanoevents": "^9.0.0",
-    "picocolors": "^1.0.0",
-    "postcss": "^8.4.32",
+    "picocolors": "^1.0.1",
+    "postcss": "^8.4.41",
     "postcss-combine-media-query": "^1.0.1",
     "postcss-hexrgba": "^2.1.0",
     "postcss-media-minmax": "^5.0.0",
-    "postcss-mixins": "^9.0.4",
+    "postcss-mixins": "^10.0.1",
     "postcss-momentum-scrolling": "^3.14.22",
-    "postcss-nested": "^6.0.1",
+    "postcss-nested": "^6.2.0",
     "postcss-url": "^10.1.3",
     "pug": "^3.0.3",
     "recursive-copy": "^2.0.14",
@@ -43,37 +41,31 @@
     "remark-highlight.js": "^7.0.1",
     "remark-html": "^16.0.1",
     "remark-parse": "^11.0.0",
-    "remark-rehype": "^11.0.0",
+    "remark-rehype": "^11.1.0",
     "slugify": "^1.6.6",
     "spinnies": "^0.5.1",
     "ssdeploy": "^0.9.3",
     "sugarss": "^4.0.1",
     "typedoc": "0.22.17",
     "typescript": "~4.7.4",
-    "unified": "^11.0.4",
+    "unified": "^11.0.5",
     "unist-util-filter": "^5.0.1",
     "unist-util-flatmap": "^1.0.0",
     "unist-util-visit": "^5.0.0",
-    "unzipper": "^0.10.14",
-    "vite": "^5.0.13",
+    "unzipper": "^0.12.3",
+    "vite": "^5.3.5",
     "vite-plugin-pug-transformer": "^1.0.5"
   },
   "devDependencies": {
-    "@logux/eslint-config": "^52.0.2",
-    "@logux/stylelint-config": "^0.16.0",
-    "@size-limit/file": "^11.0.0",
-    "eslint": "^8.55.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-n": "^16.3.1",
-    "eslint-plugin-prefer-let": "^3.0.1",
-    "eslint-plugin-promise": "^6.1.1",
+    "@logux/eslint-config": "^53.3.0",
+    "@size-limit/file": "^11.1.4",
+    "eslint": "^9.8.0",
+    "globals": "^15.9.0",
     "nano-staged": "^0.8.0",
-    "serve": "^14.2.1",
-    "simple-git-hooks": "^2.9.0",
-    "size-limit": "^11.0.0",
-    "stylelint": "^15.11.0",
-    "svgo": "^3.0.5"
+    "serve": "^14.2.3",
+    "simple-git-hooks": "^2.11.1",
+    "size-limit": "^11.1.4",
+    "svgo": "^3.3.2"
   },
   "repository": "logux/logux.org",
   "homepage": "https://logux.org/",
@@ -95,33 +87,6 @@
       "postcss-hexrgba": {},
       "postcss-momentum-scrolling": {},
       "autoprefixer": {}
-    }
-  },
-  "eslintConfig": {
-    "extends": "@logux/eslint-config",
-    "rules": {
-      "no-loop-func": "off"
-    },
-    "overrides": [
-      {
-        "files": "scripts/**/*.js",
-        "rules": {
-          "no-console": "off"
-        }
-      }
-    ]
-  },
-  "eslintIgnore": [
-    "scripts/lib/dirs.js",
-    "dist"
-  ],
-  "stylelint": {
-    "extends": "@logux/stylelint-config",
-    "customSyntax": "sugarss",
-    "rules": {
-      "function-disallowed-list": null,
-      "no-irregular-whitespace": null,
-      "color-no-hex": null
     }
   },
   "simple-git-hooks": {
