--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,23 +23,9 @@ jobs:
         run: pnpm install --frozen-lockfile --ignore-scripts --production
       - name: Build static files
         run: pnpm build
-      - name: Check files changes
-        id: hash
-        run: ./node_modules/.bin/ssdeploy changed
-        env:
-          WEBSITE_URL: logux.org
-      - name: Auth Google Cloud
-        uses: google-github-actions/auth@v1
+      - name: Deploy
+        uses: cloudflare/wrangler-action@v3
         with:
-          credentials_json: ${{ secrets.GCLOUD_AUTH }}
-      - name: Install Google Cloud
-        if: '!steps.hash.outputs.noChanges'
-        uses: google-github-actions/setup-gcloud@v1
-      - name: Deploy files
-        if: '!steps.hash.outputs.noChanges'
-        run: ./node_modules/.bin/ssdeploy deploy --verbose
-        env:
-          GCLOUD_APP: ${{ secrets.GCLOUD_APP }}
-          GCLOUD_PROJECT: ${{ secrets.GCLOUD_PROJECT }}
-          CLOUDFLARE_ZONE: ${{ secrets.CLOUDFLARE_ZONE }}
-          CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          command: pages deploy dist/ --project-name=logux
