--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,40 @@
 name: CI
 on:
-  repository_dispatch:
-  workflow_call:
-permissions:
-  contents: read
+  push:
+    branches:
+      - main
+  pull_request:
 jobs:
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    steps:
+      - name: Checkout the repository
+        uses: actions/checkout@v4
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
+      - name: Install Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          cache: pnpm
+      - name: Install all dependencies
+        run: pnpm install --ignore-scripts
+      - name: Build and test
+        run: pnpm test
+        env:
+          CI: 1
+          NO_CONTENT: 1
   deploy:
     runs-on: ubuntu-latest
+    needs:
+      - test
+    permissions:
+      contents: read
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v4
