--- a/package.json
+++ b/package.json
@@ -127,5 +127,8 @@
       "path": "dist/assets/*.js",
       "limit": "5 KB"
     }
-  ]
+  ],
+  "pnpm": {
+    "onlyBuiltDependencies": ["simple-git-hooks", "esbuild"]
+  }
 }
