--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.21",
     "capitalize": "^2.0.4",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "fast-glob": "^3.3.3",
     "jstransformer-lowlight": "^0.1.0",
     "lowlight": "^3.3.0",
@@ -40,7 +40,7 @@
     "remark-highlight.js": "^7.0.1",
     "remark-html": "^16.0.1",
     "remark-parse": "^11.0.0",
-    "remark-rehype": "^11.1.1",
+    "remark-rehype": "^11.1.2",
     "slugify": "^1.6.6",
     "spinnies": "^0.5.1",
     "sugarss": "^5.0.0",
@@ -51,13 +51,13 @@
     "unist-util-flatmap": "^1.0.0",
     "unist-util-visit": "^5.0.0",
     "unzipper": "^0.12.3",
-    "vite": "^6.2.6",
+    "vite": "^6.3.2",
     "vite-plugin-pug-transformer": "^1.0.7"
   },
   "devDependencies": {
-    "@logux/eslint-config": "^55.2.0",
+    "@logux/eslint-config": "^55.2.1",
     "@size-limit/file": "^11.2.0",
-    "eslint": "^9.23.0",
+    "eslint": "^9.25.0",
     "globals": "^16.0.0",
     "nano-staged": "^0.8.0",
     "serve": "^14.2.4",
@@ -129,6 +129,9 @@
     }
   ],
   "pnpm": {
-    "onlyBuiltDependencies": ["simple-git-hooks", "esbuild"]
+    "onlyBuiltDependencies": [
+      "simple-git-hooks",
+      "esbuild"
+    ]
   }
 }
