--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   "devDependencies": {
     "@logux/eslint-config": "^55.2.1",
     "@size-limit/file": "^11.2.0",
+    "actions-up": "^1.3.1",
     "eslint": "^9.25.0",
     "globals": "^16.0.0",
     "nano-staged": "^0.8.0",
